Split off serialization code into its own library
Change-Id: I87a0fc1091e05e41d66ab8973d76fdc733fb660f

--- a/phpunit.xml.dist
+++ b/phpunit.xml.dist
@@ -13,10 +13,10 @@
          strict="true"
          verbose="true">
     <testsuites>
-        <testsuite name="AskUnitTests">
+        <testsuite name="AskSerializationUnitTests">
             <directory>Tests/Phpunit</directory>
         </testsuite>
-        <testsuite name="AskIntegrationTests">
+        <testsuite name="AskSerializationIntegrationTests">
             <directory>Tests/Integration</directory>
         </testsuite>
     </testsuites>
