--- a/composer.json
+++ b/composer.json
@@ -1,14 +1,16 @@
 {
 	"name": "ask/ask",
 	"type": "library",
-	"description": "Library containing a PHP implementation of the Ask query language",
+	"description": "Library containing serializers and deserializers for the PHP implementation of the Ask query language",
 	"keywords": [
 		"ask",
 		"wikidata",
 		"SMW",
-		"Semantic MediaWiki"
+		"Semantic MediaWiki",
+		"Serialization",
+		"Deserialization"
 	],
-	"homepage": "https://github.com/wmde/Ask",
+	"homepage": "https://github.com/wmde/AskSerialization",
 	"license": "GPL-2.0+",
 	"authors": [
 		{
@@ -16,20 +18,17 @@
 			"email": "jeroendedauw@gmail.com",
 			"homepage": "http://jeroendedauw.com",
 			"role": "Developer"
-		},
-		{
-			"name": "Markus Krötzsch",
-			"homepage": "http://korrekt.org",
-			"role": "Author of the code this lib is based on"
 		}
 	],
 	"support": {
 		"issues": "https://bugzilla.wikimedia.org/",
-		"irc": "irc://irc.freenode.net/wikimedia-wikidata"
+		"irc": "irc://irc.freenode.net/wikidata"
 	},
 	"require": {
 		"php": ">=5.3.0",
-		"data-values/data-values": "@dev",
+		"ask/ask": "dev-master",
+		"data-values/data-values": "dev-master",
+		"data-values/common": "dev-master",
 		"serialization/serialization": "~2.0"
 	},
 	"require-dev": {
@@ -37,7 +36,7 @@
 	},
 	"autoload": {
 		"files" : [
-			"Ask.php"
+			"AskSerialization.php"
 		]
 	}
 }
