Update package name
Change-Id: I91c7fe446b4014129580d291911ae5f3acfa0206

--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-	"name": "ask/ask",
+	"name": "ask/serialization",
 	"type": "library",
 	"description": "Library containing serializers and deserializers for the PHP implementation of the Ask query language",
 	"keywords": [
