Update min stability
Change-Id: Ibec62d136b1603b81718ddf2ba009be4535ac829

--- a/composer.json
+++ b/composer.json
@@ -31,6 +31,7 @@
 		"data-values/common": "dev-master",
 		"serialization/serialization": "~2.0"
 	},
+	"minimum-stability" : "dev",
 	"require-dev": {
 		"satooshi/php-coveralls": "dev-master"
 	},
