Perpare library for its first release
Change-Id: I11d2275ad2904eb2a75b54c9f980b700e8c20997

--- a/phpunit.xml.dist
+++ b/phpunit.xml.dist
@@ -1,6 +1,6 @@
 <phpunit backupGlobals="false"
          backupStaticAttributes="false"
-         bootstrap="Tests/bootstrap.php"
+         bootstrap="tests/bootstrap.php"
          cacheTokens="false"
          colors="true"
          convertErrorsToExceptions="true"
@@ -14,10 +14,10 @@
          verbose="true">
     <testsuites>
         <testsuite name="AskSerializationUnitTests">
-            <directory>Tests/Phpunit</directory>
+            <directory>tests/Phpunit</directory>
         </testsuite>
         <testsuite name="AskSerializationIntegrationTests">
-            <directory>Tests/Integration</directory>
+            <directory>tests/Integration</directory>
         </testsuite>
     </testsuites>
     <filter>
