--- a/composer.json
+++ b/composer.json
@@ -29,7 +29,7 @@
 		"serialization/serialization": "~2.0",
 		"data-values/data-values": "~0.1",
 		"data-values/common": "~0.1",
-		"data-values/serialization": "dev-deserializer"
+		"data-values/serialization": "*"
 	},
 	"autoload": {
 		"files" : [
