--- a/.travis.yml
+++ b/.travis.yml
@@ -9,10 +9,7 @@ before_script:
   - composer install
 
 script:
-  - phpunit --coverage-clover build/logs/clover.xml
-
-after_script:
-  - php vendor/bin/coveralls -v
+  - phpunit
 
 notifications:
   email:
