--- a/composer.json
+++ b/composer.json
@@ -27,7 +27,9 @@
 		"php": ">=5.3.0",
 		"ask/ask": "~1.0",
 		"serialization/serialization": "~2.0",
-		"data-values/data-values": "~0.1",
+		"data-values/data-values": "~0.1"
+	},
+	"require-dev": {
 		"data-values/serialization": "~0.1"
 	},
 	"autoload": {
