add branch alias

--- a/composer.json
+++ b/composer.json
@@ -41,5 +41,10 @@
 			"Ask\\Deserializers\\": "src",
 			"Ask\\": "src"
 		}
+	},
+	"extra": {
+		"branch-alias": {
+			"dev-master": "1.0.x-dev"
+		}
 	}
 }
